--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@lottiefiles/react-lottie-player": "^3.5.3",
     "@reduxjs/toolkit": "^1.9.7",
+    "animate.css": "^4.1.1",
     "antd": "^5.11.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
