--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-icons": "^4.12.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.20.0",
+    "react-slick": "^0.29.0",
     "sass": "^1.69.5"
   },
   "devDependencies": {
