--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "animate.css": "^4.1.1",
     "antd": "^5.11.5",
     "aos": "^2.3.4",
+    "hamburger-react": "^2.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.20.0",
     "react-slick": "^0.29.0",
+    "redux": "^4.2.1",
     "sass": "^1.69.5"
   },
   "devDependencies": {
